bugfix: ensure navbar menus shows on mobile
- increase specificity of `navbar-menu-mobile-active` so that `display: block` is applied

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
 @import "./components/components.scss";
-.navbar-menu-mobile-active {
+.navbar-menu.navbar-menu-mobile-active {
   display: block;
 }
